<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/action_testonly_rotate"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="always"
        android:title="@string/action_testonly_rotate"/>
    
   
    <!--  These items should be in the overflow -->
    
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_testonly_generate"
        android:showAsAction="never"
        android:title="@string/action_testonly_generate"/>
    <item
        android:id="@+id/action_testonly_zap"
        android:showAsAction="never"
        android:title="@string/action_testonly_zap"/>
    <item
        android:id="@+id/action_testonly_toggle_google_drive"
        android:showAsAction="never"
        android:title="@string/action_testonly_toggle_google_drive"/>
    <item
        android:id="@+id/action_testonly_toggle_photo_delay"
        android:showAsAction="never"
        android:title="@string/action_testonly_toggle_photo_delay"/>
    <item
        android:id="@+id/action_testonly_toggle_small_device"
        android:showAsAction="never"
        android:title="@string/action_testonly_toggle_small_device"/>
    <item
        android:id="@+id/action_testonly_exit"
        android:showAsAction="never"
        android:title="@string/action_testonly_exit"/>
</menu>
